--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
         <form class="grid-container form-calculadora">
           <div class="ip-field">
             <label for="ip">IP Address</label>
-            <input type="text" name="ip" id="ip" placeholder="Digite o endereço IP separado por '.'" />
+            <div class="ip-input-container">
+              <input type="text" name="ip" class="ip-input" id="ip" placeholder="1º Octeto" />
+              <p>.</p>
+              <input type="text" name="ip" class="ip-input" id="" placeholder="2º Octeto" />
+              <p>.</p>
+              <input type="text" name="ip" class="ip-input" id="" placeholder="3º Octeto" />
+              <p>.</p>
+              <input type="text" name="ip" class="ip-input" id="" placeholder="4º Octeto" />
+            </div>
           </div>
           <div class="cidr-field">
             <label for="cidr">CIDR</label>
