inicio funcao getIP

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
           <div class="ip-field">
             <label for="ip">IP Address</label>
             <div class="ip-input-container">
-              <input type="number" min="0" max="255" name="ip" class="ip-input" id="ip" placeholder="" />
+              <input type="number" min="0" max="255" name="ip" class="ip-input" id="primeiroOcteto" placeholder="" />
               <p>.</p>
-              <input type="number" min="0" max="255" name="ip" class="ip-input" id="" placeholder="" />
+              <input type="number" min="0" max="255" name="ip" class="ip-input" id="segundoOcteto" placeholder="" />
               <p>.</p>
-              <input type="number" min="0" max="255" name="ip" class="ip-input" id="" placeholder="" />
+              <input type="number" min="0" max="255" name="ip" class="ip-input" id="terceiroOcteto" placeholder="" />
               <p>.</p>
-              <input type="number" min="0" max="255" name="ip" class="ip-input" id="" placeholder="" />
+              <input type="number" min="0" max="255" name="ip" class="ip-input" id="quartoOcteto" placeholder="" />
             </div>
           </div>
           <div class="cidr-field">
