add container detalhes

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
           </div>
         </form>
       </div>
+      <div class="container" id="detalhes">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
     </main>
   </body>
   <script src="./assets/js/script.js"></script>
