add info nos paragrafos

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         </form>
       </div>
       <div class="container" id="detalhes">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p id="pClasse"></p>
+        <p id="pMascara">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p id="pHosts">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p id="pRedes">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       </div>
     </main>
   </body>
