ajustes gerais de logica e layout

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <button id="btn-calcular">CALCULAR</button>
         </form>
       </div>
-      <div class="container" id="resultado">
+      <!-- <div class="container" id="resultado">
         <form class="grid-container form-resultado">
           <div class="address-field">
             <label for="end-subrede">Endereço de Rede</label>
@@ -49,12 +49,12 @@
             <input type="text" name="hosts" id="hosts" />
           </div>
         </form>
-      </div>
+      </div> -->
       <div class="container" id="detalhes">
-        <p id="pClasse"></p>
-        <p id="pMascara">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <p id="pHosts">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <p id="pRedes">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p id="pClasse">Digite o IP e o CIDR para ver os detalhes do cálculo</p>
+        <p id="pMascara"></p>
+        <p id="pHosts"></p>
+        <p id="pRedes"></p>
       </div>
     </main>
   </body>
