logica layout finalizados. testes iniciais ok. enviado para producao

--- a/index.html
+++ b/index.html
@@ -30,31 +30,14 @@
           <button id="btn-calcular">CALCULAR</button>
         </form>
       </div>
-      <!-- <div class="container" id="resultado">
-        <form class="grid-container form-resultado">
-          <div class="address-field">
-            <label for="end-subrede">Endereço de Rede</label>
-            <input type="text" name="end-subrede" id="end-subrede" />
-          </div>
-          <div class="mask-field">
-            <label for="mask-subnet">Máscara</label>
-            <input type="text" name="mask-subnet" id="mask-subnet" />
-          </div>
-          <div class="subnets-field">
-            <label for="subnets">Total de Subredes</label>
-            <input type="text" name="subnets" id="subnets" />
-          </div>
-          <div class="hosts-field">
-            <label for="hosts">Total de Hosts</label>
-            <input type="text" name="hosts" id="hosts" />
-          </div>
-        </form>
-      </div> -->
       <div class="container" id="detalhes">
-        <p id="pClasse">Digite o IP e o CIDR para ver os detalhes do cálculo</p>
-        <p id="pMascara"></p>
-        <p id="pHosts"></p>
-        <p id="pRedes"></p>
+        <p id="pTitulo">Digite o IP e o CIDR para ver os detalhes do cálculo</p>
+        <p id="pIP"><span></span></p>
+        <p id="pClasse"><span></span></p>
+        <p id="pMascaraDecimal"><span></span></p>
+        <p id="pMascaraBinario"><span></span></p>
+        <p id="pHosts"><span></span></p>
+        <p id="pRedes"><span></span></p>
       </div>
     </main>
   </body>
