add footer e alterado bg-color do body

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <p id="pRedes"><span></span></p>
       </div>
     </main>
+    <footer><p id="pFooter">Developed by Tiago Guimarães</p></footer>
   </body>
   <script src="./assets/js/script.js"></script>
 </html>
