--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
         </form>
       </div>
       <div class="container" id="detalhes">
-        <p id="pTitulo">Digite o IP e o CIDR para ver os detalhes do cálculo</p>
-        <p id="pIP"><span></span></p>
-        <p id="pClasse"><span></span></p>
-        <p id="pMascaraDecimal"><span></span></p>
-        <p id="pMascaraBinario"><span></span></p>
-        <p id="pHosts"><span></span></p>
-        <p id="pRedes"><span></span></p>
+        <p id="paragrafoTitulo">Digite o IP e o CIDR para ver os detalhes do cálculo</p>
+        <p id="paragrafoIP"><span></span></p>
+        <p id="paragrafoClasse"><span></span></p>
+        <p id="paragrafoMascaraDecimal"><span></span></p>
+        <p id="paragrafoMascaraBinario"><span></span></p>
+        <p id="paragrafoHosts"><span></span></p>
+        <p id="paragrafoRedes"><span></span></p>
       </div>
     </main>
-    <footer><p id="pFooter">Developed by Tiago Guimarães</p></footer>
+    <footer><p id="paragrafoFooter">Developed by Tiago Guimarães</p></footer>
   </body>
   <script src="./assets/js/script.js"></script>
 </html>
