ajuste posicao elemento footer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p id="paragrafoRedes"><span></span></p>
       </div>
     </main>
-    <footer><p id="paragrafoFooter">Developed by Tiago Guimarães</p></footer>
+    <footer id="paragrafoFooter"><p>Developed by Tiago Guimarães</p></footer>
   </body>
   <script src="./assets/js/script.js"></script>
 </html>
