--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </form>
       </div>
       <div class="container" id="detalhes">
-        <p id="paragrafoTitulo">Digite o IP e o CIDR para ver os detalhes do cálculo</p>
+        <p id="paragrafoTitulo">Digite o IP e o CIDR para ver o resultado abaixo:</p>
         <p id="paragrafoIP"><span></span></p>
         <p id="paragrafoClasse"><span></span></p>
         <p id="paragrafoMascaraDecimal"><span></span></p>
