ajustes iniciais para incluir intervalo valido de ips dentro da faixa escolhida pelo usuario

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <p id="paragrafoMascaraBinario"><span></span></p>
         <p id="paragrafoHosts"><span></span></p>
         <p id="paragrafoRedes"><span></span></p>
+        <p id="paragraIntervalo">Intervalo Válido:</p>
+        <p id="paragrafoListaIPs">De: <span class="primeiroIP"></span> até: <span class="ultimoIP"></span></p>
       </div>
     </main>
     <footer id="paragrafoFooter"><p>Developed by Tiago Guimarães</p></footer>
