ajuste do layout ok.

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
         </form>
       </div>
       <div class="container" id="detalhes">
-        <p id="paragrafoTitulo">Digite o IP e o CIDR para ver o resultado abaixo:</p>
-        <p id="paragrafoIP"><span></span></p>
-        <p id="paragrafoClasse"><span></span></p>
-        <p id="paragrafoMascaraDecimal"><span></span></p>
-        <p id="paragrafoMascaraBinario"><span></span></p>
-        <p id="paragrafoHosts"><span></span></p>
-        <p id="paragrafoRedes"><span></span></p>
-        <p id="paragraIntervalo">Intervalo Válido:</p>
-        <p id="paragrafoListaIPs">De: <span class="primeiroIP"></span> até: <span class="ultimoIP"></span></p>
+        <p class="container-p displayToggle" id="paragrafoTitulo">Digite o IP e o CIDR para ver o resultado abaixo:</p>
+        <p class="container-p displayToggle" id="paragrafoIP"><span></span></p>
+        <p class="container-p displayToggle" id="paragrafoClasse"><span></span></p>
+        <p class="container-p displayToggle" id="paragrafoMascaraDecimal"><span></span></p>
+        <p class="container-p displayToggle" id="paragrafoMascaraBinario"><span></span></p>
+        <p class="container-p displayToggle" id="paragrafoHosts"><span></span></p>
+        <p class="container-p displayToggle" id="paragrafoRedes"><span></span></p>
+        <p class="container-p displayToggle" id="paragraIntervalo">Intervalo Válido:</p>
+        <p class="container-p displayToggle" id="paragrafoListaIPs">De: <span class="primeiroIP"></span> até: <span class="ultimoIP"></span></p>
       </div>
     </main>
     <footer id="paragrafoFooter"><p>Developed by Tiago Guimarães</p></footer>
