inativado campos sobre intervalo ip até implementação da logica

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <p class="container-p displayToggle" id="paragrafoMascaraBinario"><span></span></p>
         <p class="container-p displayToggle" id="paragrafoHosts"><span></span></p>
         <p class="container-p displayToggle" id="paragrafoRedes"><span></span></p>
-        <p class="container-p displayToggle" id="paragraIntervalo">Intervalo Válido:</p>
-        <p class="container-p displayToggle" id="paragrafoListaIPs">De: <span class="primeiroIP"></span> até: <span class="ultimoIP"></span></p>
+        <!-- <p class="container-p displayToggle" id="paragraIntervalo">Intervalo Válido:</p> -->
+        <!-- <p class="container-p displayToggle" id="paragrafoListaIPs">De: <span class="primeiroIP"></span> até: <span class="ultimoIP"></span></p> -->
       </div>
     </main>
     <footer id="paragrafoFooter"><p>Developed by Tiago Guimarães</p></footer>
