--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <label for="cidr">CIDR</label>
             <input type="number" name="cidr" id="cidr" value="8" min="8" max="32" />
           </div>
+          <button id="btnCalcular">CALCULAR</button>
         </form>
       </div>
       <div class="container" id="detalhes">
