troca tag <p>.</p> para span

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <label for="ip">IP Address</label>
             <div class="ip-input-container">
               <input type="number" min="0" max="255" name="ip" class="ip-input" id="primeiroOcteto" placeholder="" />
-              <p>.</p>
+              <span>.</span>
               <input type="number" min="0" max="255" name="ip" class="ip-input" id="segundoOcteto" placeholder="" />
-              <p>.</p>
+              <span>.</span>
               <input type="number" min="0" max="255" name="ip" class="ip-input" id="terceiroOcteto" placeholder="" />
-              <p>.</p>
+              <span>.</span>
               <input type="number" min="0" max="255" name="ip" class="ip-input" id="quartoOcteto" placeholder="" />
             </div>
           </div>
